<resources>
    <!-- <string name="app_name">Mackenzie</string>-->
    <string name="app_name">Calculator</string>

    <!--<string name="input">Mackenzie is SB \n哈哈哈哈哈</string>-->
    <string name="input"></string>
    <string name="output"> </string>
    <string name="action_settings">Settings</string>
    <string name="clear">清除</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="chu">÷</string>
    <string name="mul">x</string>
    <string name="div">-</string>
    <string name="jia">+</string>
    <string name="dian">.</string>
    <string name="equal">=</string>
</resources>
